--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "swiper": "^10.0.4"
   },
   "devDependencies": {
     "@capacitor/cli": "5.2.1",
@@ -36,10 +37,12 @@
     "@testing-library/user-event": "^14.4.3",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-legacy": "^4.0.2",
     "@vitejs/plugin-react": "^4.0.1",
     "cypress": "^12.7.0",
-    "eslint": "^8.35.0",
+    "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "jsdom": "^22.1.0",
     "typescript": "^5.1.6",
