--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor/android": "5.2.1",
     "@capacitor/app": "5.0.6",
+    "@capacitor/camera": "^5.0.6",
     "@capacitor/core": "5.2.1",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.1",
