feat: added native icon and splash screen

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "swiper": "^10.0.4"
   },
   "devDependencies": {
+    "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "5.2.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
