--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-responsive": "^9.0.2",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
     "swiper": "^10.0.4"
