--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic/react-router": "^7.0.0",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "email-validator": "^2.0.4",
     "firebase": "^10.1.0",
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
