--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ionicons": "^7.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^4.10.1",
     "react-responsive": "^9.0.2",
     "react-router": "^5.3.4",
