--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -62,5 +62,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+		<string>We want to track you</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+		<string>We want your current location</string>
+
 </dict>
 </plist>
