fix: final final cleanup for web deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,15 @@
     "lib": ["dom", "es2017"],
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "noEmitOnError": false
   },
   "include": ["src"],
-  "exclude": ["node_modules", "**/*.spec.ts", "**/*.test.ts"],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/setupTests.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
