feat: added a map that centere on users location in the observation form otherwise defaults to a UK location

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -65,6 +65,8 @@
 	<key>NSLocationAlwaysUsageDescription</key>
 		<string>Our app needs to access your location even when you're not using the app to provide continuous navigation and location-based services.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
+		<string>Our app needs to access your location even when you're using the app to provide continuous navigation and location-based services.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 		<string>Our app needs to access your location even when you're not using the app to provide continuous navigation and location-based services.</string>
 </dict>
 </plist>
