--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.6",
     "@capacitor/core": "5.2.1",
+    "@capacitor/geolocation": "^5.0.6",
     "@capacitor/google-maps": "^5.2.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/ios": "5.2.1",
