--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/android": "5.2.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/camera": "^5.0.6",
+    "@capacitor/clipboard": "^5.0.6",
     "@capacitor/core": "5.2.1",
     "@capacitor/geolocation": "^5.0.6",
     "@capacitor/google-maps": "^5.2.2",
@@ -23,6 +24,7 @@
     "@capacitor/ios": "5.2.1",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/preferences": "^5.0.6",
+    "@capacitor/share": "^5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@codetrix-studio/capacitor-google-auth": "^3.3.2",
     "@ionic/react": "^7.0.0",
